--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,298 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+*{
+ font-family: "Cabin", sans-serif;
+/* font-optical-sizing: auto;
+font-weight: <weight>;
+ font-style: normal;
+font-variation-settings:"wdth" 100; */
+
+}
+.nav-sticky{
+  animation: 500ms ease-in-out 0s normal fadeInDown;
+}
+.nav-drop{
+  transition: all 0.3s ease-in-out;
+  z-index: 99;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* .nav-drop.active {
+  height: 200px; overflow-y: scroll;
+} */
+/* .imagecarousel{
+  transition: all 0.8s ease 0s;
+  transform: translate3d(-1684px, 0px, 0px);
+}  */
+.step-icon{
+  box-shadow: -1px 3px 20px 0px rgb(82, 90, 101, 0.1);
 }
+.step-num{
+  box-shadow: 0 5px 15px 0 rgba(117, 178, 240, 0.2);
+}
+.list-points li{
+  position: relative;
+}
+.list-points li::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 16px;
+  height: 5px;
+  width: 5px;
+  border-radius: 50%;
+  background: #ff9b08;
+}
+.home-area{
+  position: relative;
+  background: linear-gradient(to right, #983ff9, #542dff);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  z-index: 10;
+}
+.home-area2{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: url("https://barakahit.net/html/crypto/assets/img/svg-layer.svg") no-repeat center center;
+  background-size: cover;
+  opacity: 0.25;
+  z-index: -1;
+}
+.counter-area{
+  position: relative;
+  background: linear-gradient(to right, #983ff9, #542dff);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  /* opacity: 0.5; */
+  z-index: 1;
+  padding: 100px 0;
+}
+.counter-area2{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: url("https://barakahit.net/html/crypto/assets/img/svg-layer.svg") no-repeat center center;
+  background-size: cover;
+  opacity: 0.5;
+  z-index: -1;
+}
+.document-area{
+  position: relative;
+  background: linear-gradient(to right, #983ff9, #542dff);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  z-index: 1;
+}
+.bitcoin-area:hover{
+  transform: translateY(-10px);
+  transition: all 1s;
+}
+.document-area:hover{
+  transform: translateY(-10px);
+  transition: all 1s;
+}
+.document-area2{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: url("https://barakahit.net/html/crypto/assets/img/svg-layer.svg") no-repeat center center;
+  background-size: cover;
+  opacity: 0.5;
+  z-index: -1;
+}
+.footer-area{
+  background: url("https://www.barakahit.net/html/crypto/assets/img/footer-bg.jpg") #0b112a;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.show{
+  content: "";
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  transform: translate(-50%, -50%);
+  transition:width 0.5s ease-in-out, height  0.5s ease-in-out ;
+}
+.copyright-area::before{
+  content: '';
+  position: absolute;
+  top: 5px;
+  right: -13px;
+  width: 1px;
+  height: 14px;
+  background-color: #ffffff;
+}
+.group:hover .show{
+  /* width: 225px;
+  height: 225px; */
+  display: block;
+}
+.team-image{
+  position: relative;
+  z-index: 1;
+  box-shadow: 0 0 0 6px rgb(0, 0, 0, 0.15);
+  overflow: hidden;
+}
+.team-image::after{
+  content: "";
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  visibility: hidden;
+  background: rgba(0, 0, 0, 0.5);
+  transition:  opacity 0.5s ease, visibility 0.5s ease;
+}
+.team-image:hover::after {
+  opacity: 1;
+  visibility: visible;
+}
+.team-image img {
+  position: relative; 
+  z-index: 0; 
+  transition: transform 0.5s ease;
+}
+.team-image:hover img{
+  transform: scale(1.1);
+}
+.accordion-icon{
+  transform: translateY(-50%);
+  transition: 0.5s;
+}
+.accordion-down{
+  overflow: hidden;
+  max-height: 0;
+  opacity: 0;
+  /* transform: translateY(50%); */
+  transition: max-height 0.5s ease-in-out, opacity 0.5s ease-in-out;
+}
+.accordion-down.active {
+  max-height: 500px;  
+  opacity: 1;
+  visibility: visible;
+}
+.small-round{
+  background: #6332f0;
+  border: 3px solid #fff;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  position: relative;
+  left: 50%;
+  margin-left: -10px;
+  z-index: 1;
+}
+.v-row{
+  background: #6332f0;
+  height: 50px;
+  width: 4px;
+  position: relative;
+  left: 50%;
+  margin-left: -2px;
+  overflow: hidden;
+}
+.sub-title{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+.h-border {
+  width: 100%;
+  height: 4px;
+  background: #6332f0;
+  margin-top: 181px;
+}
+.owl-item:nth-child(2n+0) .roadmap-detail-box{
+  position: absolute;
+  bottom: 100%;
+  margin-top: 0;
+}
+.owl-item:nth-child(2n+0) .roadmap-chart{
+  transform: rotate(180deg);
+  margin-top: -50px;
+  display: inline-block;
+}
+.owl-item:nth-child(2n+0) .title{
+   top: 100%;
+}
+.owl-item:nth-child(2n+0) .main-box{
+  margin-top: -62px;
+  padding-top: 50px;
+  text-align: center;
+  position: relative;
+}
+.roapmap-scroll{
+  cursor: e-resize;
+}
+.roadmap-scroll::-webkit-scrollbar {
+  display: none;
+}
+.custom-width{
+  width: calc(100%-135px);
+}
+/* .owl-item:nth-child(2n+2) .title{
+  position: absolute;
+  top: 100%;
+} */
+
+.hover-delay {
+    transition: all 10ms;
+    /* transition-delay: 0.2s;  */
+  }
+  .carosel img{
+    flex-shrink: 0;
+    animation: carouselimage 5s linear infinite  alternate-reverse;
+  }
+
+  .image-animate{
+    animation: float 2s infinite ;
+  }
+  @keyframes float {
+    0%, 100% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-10px);
+    }
+  }
+  @keyframes carouselimage{
+    from{
+      transform: translateX(100%);
+    }
+    to{
+      transform: translateX(-100%);
+    }
+  }
+  @keyframes fadeInDown{
+    0%{
+      opacity: 0;
+      transform: translate3d(0,-100%,0);
+    }
+    100%{
+      opacity: 1;
+      transform: translateZ(0);
+    }
+  }
